# dotfiles

./: .gitignore  AGENT.md  AGENTS.md  Brewfile  Brewfile.lock.json  CLAUDE.md  Dockerfile  IMPLICATIONS-OMA.md  PLAN.md  README.md  backup.sh  brew.txt  cask.txt  change-alacritty-icon.sh  gitsetup.sh  main.sh  setup.sh  setup_linux_deps.sh
.ai-agent/skills/local-ci-runner/: README.md  SKILL.md  pyproject.toml  test_dashboard.py
.ai-agent/skills/local-ci-runner/ci-validator/: SKILL.md  tasks.yaml
.ai-agent/skills/local-ci-runner/examples/android-ci/: workflow-map.md
.ai-agent/skills/local-ci-runner/examples/android-ci/scripts/: run_android_ci_checks.sh
.ai-agent/skills/local-ci-runner/health-check/: Justfile  SKILL.md  tasks.yaml
.ai-agent/skills/local-ci-runner/presets/: android-integrity.yaml  node-checks.yaml
.ai-agent/skills/local-ci-runner/src/async_runner/: main.py
.ai-agent/skills/local-ci-runner/tests/: test_runner.py
.github/workflows/: linux.yml  macos.yml
gemini-analyzer-workspace/iteration-1/: benchmark.json  benchmark.md
gemini-analyzer-workspace/iteration-2/: benchmark.json
git/: .gitconfig
homebrew/: Brewfile.personal
meta/config/: merge-keys-vscode.txt
meta/homebrew/: Brewfile.core  Brewfile.headless  Brewfile.personal  Brewfile.work  vscode.personal  vscode.work
meta/scripts/: alacritty-icon.sh  backup.sh  installer.sh  merge-helpers.sh  setup-alpine.sh  setup-common.sh  setup-linux.sh  (+3 more)
powerlevel10k/: .p10k.zsh
scripts/: backup.sh  setup.sh
tmux/: .tmux.conf
vscode/: keybindings.json  settings.json
zsh/: .zshrc
(+204 files in other folders)
